# safe-mac-cli

./: .gitignore  Cargo.toml  README.md  config.txt  safe-mac-cli.ipr  safe-mac-cli.iws
.github/: cargo.yaml
.github/workflows/: cargo.yaml
src/: main.rs
tests/: main_test.rs
tests/common/: mod.rs
